Updated description of day 21, introduced AoC library, and refactored the code to reduce duplication